alignment date fix

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ img {
     position: fixed;
     margin-left: auto;
     margin-right: auto;
-    left: 10vw;
+    left: 0vw;
     right: 0;
     text-align: center;
     width: 60%;
